[build-system]
requires = [
  'setuptools>=45.0',
  'setuptools-scm'
]
build-backend = "setuptools.build_meta"

[project]
name = "flare_bypasser"
version = "0.1.34"
authors = [
  {name = "yoori", email = "yuri.kuznecov@gmail.com"}
]

description = ""
readme = "README.md"
license = {text = 'GNU Lesser General Public License'}
requires-python = ">=3.9"

dependencies = [
  'asyncio',
  'uuid',
  'urllib3',
  'numpy',
  'opencv-python',
  'certifi==2024.8.30',
  'websockets==14.0',
  'zendriver @ git+https://github.com/yoori/zendriver.git',
  'argparse',
  'oslex',
  'jinja2',

  # Server dependecies
  'fastapi',
  'uvicorn',

  'xvfbwrapper==0.2.9 ; platform_system != "Windows"',
  'gunicorn ; platform_system != "Windows"',
]

[project.urls]
homepage = "https://github.com/yoori/flare-bypasser"

[options]
package_dir = "src/flare_bypasser"

[project.scripts]
flare_bypass_server = "flare_bypasser:server_run"