[build-system]
requires = [
  'setuptools>=45.0',
  'setuptools-scm'
]
build-backend = "setuptools.build_meta"

[project]
name = "flare_bypasser"
version = "0.1.42"
authors = [
  {name = "yoori", email = "yuri.kuznecov@gmail.com"}
]

description = ""
readme = "README.md"
license = {text = 'GNU Lesser General Public License'}
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/yoori/flare-bypasser"

[options]
package_dir = "src/flare_bypasser"

[project.scripts]
flare_bypass_server = "flare_bypasser:server_run"