[build-system]
requires = [
  'setuptools>=61.0'
]
build-backend = "setuptools.build_meta"

[project]
name = "flare_bypasser"
version = "0.1.55"
authors = [
  {name = "yoori", email = "yuri.kuznecov@gmail.com"}
]

description = ""
readme = "README.md"
license = {text = 'GNU Lesser General Public License'}
requires-python = ">=3.9"
dependencies = [
  'asyncio',
  'uuid',
  'urllib3',
  'httpx',
  'argparse',
  'oslex',
  'jinja2',
  'numpy',
  'xvfbwrapper==0.2.9 ; platform_system != "Windows"',
  'fastapi',
  'uvicorn',
  'gunicorn ; platform_system != "Windows"',
  'websockets==14.0',
  'zendriver_flare_bypasser==0.2.6.1',
]

[project.urls]
homepage = "https://github.com/yoori/flare-bypasser"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
flare_bypass_server = "flare_bypasser:server_run"
browser_wrapper_util = "flare_bypasser.browser_wrapper_util:main"
